# cosmograph

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BSSN_macros.h  CMakeLists.txt  ICs.cc  ICs.h  ICs_data.h  LICENSE.txt  Makefile  README.md  Wave.cc  Wave.h  benchmarks.txt  bssn.cc  bssn.h  bssn_data.h  bssn_macros.h  config.txt  cosmo.cc  cosmo.h  cosmo_defines.h  cosmo_globals.h  cosmo_includes.h  cosmo_macros.h  cosmo_macros.h.bak  cosmo_types.h  cosmosim.cc  cosmosim.h  defines.h  fiducial_config.txt  frw.cc  frw.h  globals.h  hydro.cc  hydro.h  hydro_data.h  hydro_macros.h  io.cc  (+19 more)
ICs/: ICs.cc  ICs.h
IO/: IOData.h  io.cc  io.h
bssn/: bssn.cc  bssn.h  bssn_data.h  bssn_macros.h
cmake/: compiler.cmake  cosmotrace.cmake  fftw.cmake  hdf5.cmake  multigrid.cmake  openmp.cmake  optimization.cmake  options.cmake
components/IO/: IO.h
components/Lambda/: lambda.cc  lambda.h
components/bssn/: BSSNGaugeHandler.cc  BSSNGaugeHandler.h  bardeen.cc  bardeen.h  bssn.cc  bssn.h  bssn_data.h  bssn_gauge_fns.cc  bssn_gauge_fns.h  bssn_ic.cc  bssn_ic.h  bssn_macros.h
components/dust_fluid/: dust.cc  dust.h  dust_ic.cc  dust_ic.h
components/particles/: particle_ic.cc  particle_ic.h  particles.cc  particles.h  particles_data.h  particles_macros.h
components/phase_space_sheet/: sheets.cc  sheets.h  sheets_ic.cc  sheets_ic.cc.bak  sheets_ic.h  sheets_macros.h
components/scalar/: scalar.cc  scalar.h  scalar_ic.cc  scalar_ic.h
components/static/: static.cc  static.h  static_ic.cc  static_ic.h
config/: 1d_dust.txt  1d_sheets.txt  apples_linwave.txt  apples_stability.txt  benchmark.txt  dipole.txt  dipole_test.txt  dust_SVT_test.txt  dust_fiducial.txt  dust_lensing.txt  dust_raytracing.txt  dust_shell.txt  dust_test.txt  fiducial_config.txt  fiducial_highres_config.txt  fiducial_lowres_config.txt  lambda_test.txt  long_run_config.txt  overdense_config.txt  particles_sinusoid.txt  particles_test.txt  particles_vector.txt  proper_time.txt  scalar_test.txt  stability_test.txt
config/AwA/: gauge_wave_test_r1.txt  gauge_wave_test_r2.txt  gauge_wave_test_r4.txt  linear_wave_desitter_test_r1.txt  linear_wave_desitter_test_r2.txt  linear_wave_desitter_test_r4.txt  linear_wave_test_r1.txt  linear_wave_test_r2.txt  linear_wave_test_r4.txt  shifted_gauge_wave_test_r1.txt  shifted_gauge_wave_test_r2.txt  shifted_gauge_wave_test_r4.txt  stability_test_r1.txt  stability_test_r2.txt  stability_test_r4.txt
config/healpix_vecs/: healpix_vecs.py  nside_16.vecs  nside_32.vecs  nside_64.vecs
config/tests/: dust_ray_test.txt  kasner.txt  lambda_test.txt  long_dust_test.txt  (+6 more)
docs/: Doxyfile  RK4_integration.pptx  index.html  wedge_method_desc.txt
nweb/: nweb23.c  nweb23.h
particles/: particles.cc  particles.h  particles_data.h
scalar/: scalar.cc  scalar.h  scalar_ic.cc  scalar_ic.h
scripts/: 1d_runs.sh  1d_runs_harmonic.sh  CAMB_sigR.py  ampvary_deploy.sh  benchmark.sh  deploy_amplitude_vary.sh  deploy_res_vary.sh  deploy_runs.sh  deploy_speccut_vary.sh  dust_SVT_test.sh  dust_SVT_test_3d.sh  dust_lensing.sh  dust_mode.sh  dust_shells.sh  dust_test.sh  gauge_wave_run.sh  job_template.slurm  newt_test.sh  nl_forecast.sh  nl_forecast_post.py  particle_SVT_test.sh  phase_space_test.sh  proper_time.sh  run_tests.sh  shifted_gauge_wave_run.sh  sinusoid_gauge_test.sh  stability_run.sh  vector_test.sh
sims/: dust.cc  dust.h  dust_lambda.cc  dust_lambda.h  particles.cc  particles.h  scalar.cc  scalar.h  sheets.cc  sheets.h  sim.cc  sim.h  static.cc  static.h  vacuum.cc  vacuum.h
static/: static.h  static_ic.cc  static_ic.h
tests/: array.cc  particles.cc  reference_frw.cc  rk4.cc  scalar.cc  timer.cc
utils/: .#PeriodicArray.h  Array.h  ConfigParser.cc  ConfigParser.h  FRW.h  Fourier.cc  Fourier.h  Log.h  RK4Register.h  Timer.cc  Timer.h  TriCubicInterpolator.h  io.cc  io.h  math.cc  math.h  periodicArray.h  reference_frw.h
(+562 files in other folders)
